# admin-panel-finder

./: README.md
aj-admin-panel-finder/: MANIFEST.in  README.md  ajadminfinder.py  pyproject.toml
aj-admin-panel-finder/ajadminfinder/: _classes.py  ajadminfinder.py
aj-admin-panel-finder/tests/: test_url.py
