[tool.poetry]
name = "AJadminfinder"
version = "1.0.0"
description = "[ Admin panel finder / Admin Login Page Finder ] ¢σ∂є∂ ву 👻 (❤-❤) 👻"
authors = ["mIcHyAmRaNe <marseillaisanonymous@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://michyamrane.github.io/tools/AJadminfinder/"
repository = "https://github.com/mIcHyAmRaNe/AJadminfinder3"
keywords = ["security-scanner", "pentest-tool", "admin-page-finder", "AJadminfinder"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Natural Language :: English"
]
packages = [
    { include = "AJadminfinder" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mIcHyAmRaNe/AJadminfinder3/issues"

[tool.poetry.scripts]
AJadminfinder = "AJadminfinder.AJadminfinder:main"

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"
colorama = "^0.4.6"
httpx = {extras = ["socks"], version = "^0.23.1"}
trio = "^0.22.0"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
